# lab07-bufer-norm

./: CMakeLists.txt  lab07-bufer-main.cpp  lab07-bufer-norm.cpp  lab07-bufer-norm.h
